Fixed some errors in VAE encoder/decoder

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -11,6 +11,36 @@
    "id": "3835ee29a4fd08e9"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-17T16:16:57.558264Z",
+     "start_time": "2024-08-17T16:16:56.862456Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "!git clone https://github.com/pierclgr/Stable-Diffusion/\n",
+    "!cd Stable-Diffusion && pip install -r requirements.txt"
+   ],
+   "id": "10bfd8ca237a5ab4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'Stable-Diffusion'...\r\n",
+      "remote: Enumerating objects: 55, done.\u001B[K\r\n",
+      "remote: Counting objects: 100% (55/55), done.\u001B[K\r\n",
+      "remote: Compressing objects: 100% (39/39), done.\u001B[K\r\n",
+      "remote: Total 55 (delta 17), reused 49 (delta 11), pack-reused 0 (from 0)\u001B[K\r\n",
+      "Receiving objects: 100% (55/55), 26.39 KiB | 818.00 KiB/s, done.\r\n",
+      "Resolving deltas: 100% (17/17), done.\r\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [
