Fixed some errors in VAE encoder/decoder

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -20,7 +20,8 @@
    "cell_type": "code",
    "source": [
     "!git clone https://github.com/pierclgr/Stable-Diffusion/\n",
-    "!cd Stable-Diffusion && pip install -r requirements.txt"
+    "!mv ./Stable-Diffusion/* ./*\n",
+    "!pip install -r requirements.txt"
    ],
    "id": "10bfd8ca237a5ab4",
    "outputs": [
